Table role {
    id bigint [pk]
    name varchar
}

Table users {
    id bigint [pk]
    fullName varchar
    password varchar
    role_id bigint
    email varchar
    created_at timestamp
}



Table projects {
    id bigint [pk]
    project_name varchar
    created_at timestamp
}

Table documents {
    id bigint [pk]
    document_name varchar
    document_content text
    created_at timestamp
}

Table user_projects {
    user_id bigint
    project_id bigint
    created_at timestamp
}

Table project_documents {
    project_id bigint
    document_id bigint
    created_at timestamp
}

Ref: users.role_id > role.id
Ref: user_projects.user_id > users.id
Ref: user_projects.project_id > projects.id
Ref: project_documents.project_id > projects.id
Ref: project_documents.document_id > documents.id
